fixed nav bar spacing

--- a/emily.css
+++ b/emily.css
@@ -5,14 +5,16 @@
     box-sizing: border-box;
     font-family: exo;
 }
-
+body {
+    padding: 0px;
+    margin: 0px
+}
 header {
     width: 100%;
     height: 70px;
     background-color: black;
     color: white;
 }
-
 nav {
     display: flex;
     justify-content: space-evenly;
@@ -25,8 +27,7 @@ nav {
     font-weight: 800;
     font-size: 20px;
 }
-
-.container, li, a {
+.container , li > a {
     display: flex;
     float: right;
     margin: 5px;
@@ -38,14 +39,12 @@ nav {
     color: turquoise;
     text-decoration: none;
 }
-
 h1 {
     float: left;
     margin: 5px;
     padding: 5px;
     color: turquoise;
 }
-
 span {
     color: tomato;
 }
