--- a/frontpage.css
+++ b/frontpage.css
@@ -1,12 +1,13 @@
 * {
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding-inline-start: 0;
     box-sizing: border-box;
+    font-family: exo;
 }
 body {
-    padding: 0%;
-    margin: 0%;
+    padding: 0px;
+    margin: 0px
 }
 header {
     width: 100%;
@@ -18,15 +19,15 @@ nav {
     display: flex;
     justify-content: space-evenly;
     float: right;
-    margin: 5px 10px;
-    padding: 1px 0px;
+    margin: 10px;
+    padding: 0 10px;
     align-items: center;
     align-content: center;
     font-family: exo;
     font-weight: 800;
     font-size: 20px;
 }
-.container, li, a {
+.container , li > a {
     display: flex;
     float: right;
     margin: 5px;
